# bilsim

./: .gitignore  CMakeLists.txt  README.md  UML_DIAGRAM.md  imgui.ini  todo.md
.github/workflows/: cmake-multi-platform.yml
assets/: body.mtl  car1.mtl  steeringwheel.mtl
assets/wheels/: FLwheel.mtl  wheel_rr.mtl
docs/: ARCHITECTURE_AND_CONVENTIONS.md  UML_DIAGRAM.md  project_specifications.md
include/audio/: audio_manager.hpp
include/core/: game.hpp  game_config.hpp  game_object.hpp  game_object_manager.hpp  logger.hpp  object_sizes.hpp  obstacle.hpp  obstacle_manager.hpp  powerup.hpp  powerup_manager.hpp  vehicle.hpp  vehicle_tuning.hpp
include/core/interfaces/: IControllable.hpp  IVehicleState.hpp
include/graphics/: game_object_renderer.hpp  obstacle_renderer.hpp  powerup_renderer.hpp  scene_manager.hpp  vehicle_renderer.hpp
include/input/: input_handler.hpp
include/ui/: imgui_context.hpp  imgui_layer.hpp
src/: CMakeLists.txt  main.cpp
src/audio/: CMakeLists.txt  audioManager.cpp  audioManager.hpp  audio_manager.cpp
src/core/: CMakeLists.txt  game.cpp  game.hpp  gameObject.cpp  gameObject.hpp  game_object.cpp  obstacle.cpp  obstacle_manager.cpp  obstacle_manager.hpp  powerup.cpp  powerup.hpp  powerupManager.cpp  powerupManager.hpp  powerup_manager.cpp  powerup_manager.hpp  random_position_generator.hpp  vehicle.cpp  vehicle.hpp  vehicle_tuning.hpp
src/core/interfaces/: IControllable.hpp
src/graphics/: CMakeLists.txt  game_object_renderer.cpp  obstacle_renderer.cpp  obstacle_renderer.hpp  powerupRenderer.cpp  powerupRenderer.hpp  powerup_renderer.cpp  sceneManager.cpp  sceneManager.hpp  scene_manager.cpp  scene_manager.hpp  vehicleRenderer.cpp  vehicleRenderer.hpp  vehicle_renderer.cpp  vehicle_renderer.hpp
src/input/: CMakeLists.txt  inputHandler.cpp  inputHandler.hpp  input_handler.cpp
src/ui/: CMakeLists.txt  imgui_context.cpp  imgui_context.hpp  imgui_layer.cpp  imgui_layer.hpp  uiManager.cpp  uiManager.hpp
tests/: CMakeLists.txt  test_collision.cpp  test_gameObject.cpp  test_validation.cpp  test_vehicle.cpp
